Fix linking to rsvp submission thank you page and style overflow

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -151,8 +151,10 @@ select {
 /* rsvp-response */
 
 #thank-you {
+    width: 100%;
+    overflow: hidden;
     text-align: center;
-    margin-top: 20%;
+   
 }
 
 
